--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -358,6 +358,8 @@ code {
   background: #543926;
   text-shadow: 0px 1px 0px #000;
  }
+.slimframework:hover,
+.slimframework.active,
 .meteor:hover,
 .meteor.active {
   color: #fff;
